--- a/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extends.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extends.less
@@ -672,7 +672,6 @@
     
                 img {
                     top: 0;
-                    content: initial;
                 }
             }
             a.pagebuilder-button-link:hover {
